# oxides_ML

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: notebook-clean.yml
data/: VASP_dataset.csv  VASP_dataset.ods
data/DFT_data/: VASP_dataset.ods
data/graph_datasets/: README.md  database_4_adsorption_energy_025_125_2_False_False_False_True_False_False_initial_True  database_4_adsorption_energy_03_125_2_False_False_False_True_False_False_initial_True  database_adsorption_energy_025_125_1_False_False_False_False_False_initial_True  database_adsorption_energy_025_125_2_False_False_False_False_False_initial_True  database_adsorption_energy_025_125_True_False_False_False_False_False_initial_True
models/: README.md
models/graph_datasets/: database_4_adsorption_energy_03_125_2_False_False_False_False_False_False_initial_True  database_adsorption_energy_025_125_2_False_False_False_False_False_initial_True  database_adsorption_energy_025_125_2_False_False_False_True_False_initial_True  database_adsorption_energy_025_125_3_False_False_False_cn_False_relaxed_False  surface_adsorbates_adsorption_energy_025_125_3_False_False_False_cn_False_relaxed_False
models/test_graph_datasets/: Ag_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Au_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Cd_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Co_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Cu_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Fe_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Fe_adsorption_energy_03_125_-1_False_False_False_True_False_False_relaxed_True  Ir_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Ir_adsorption_energy_03_125_-1_False_False_False_True_False_False_relaxed_True  Ni_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Os_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Pd_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Pt_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Rh_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  Ru_adsorption_energy_025_125_-1_False_False_False_True_False_False_relaxed_True  TiO2_adsorption_energy_03_125_2_False_False_False_True_False_False_relaxed_False  Zn_adsorption_energy_03_125_-1_False_False_False_True_False_False_relaxed_True  Zn_adsorption_energy_05_125_-1_False_False_False_True_False_False_relaxed_True  (+50 more)
notebooks/: 01_graph_dataset_analysis.ipynb  02_ml_model_analysis.ipynb  03_dataset_utilities.ipynb  Adsorbate_indices.ipynb  Create_fixed_dataloaders.ipynb  DFT_data_analysis.ipynb  Experiments.ipynb  Gas_phase_check.ipynb  Generate_plots.ipynb  GraphDataset_test.ipynb  Graph_data_analysis copy.ipynb  Graph_data_analysis.ipynb  ML_comparison.ipynb  ML_data_analysis.ipynb  PyG_GettingStarted.ipynb  README.md  adsorbate_indices_cache.json  fig2.ipynb  fig3.ipynb  fig4.ipynb  gas_phase_check.ipynb  path_to_id_cache.json  test.ipynb  tmp.ipynb
notebooks/FIGURES/: Experiments_fig.ipynb  fig2.ipynb  fig3.ipynb  fig4.ipynb  (+6 more)
scripts/: adsorbate_indices_cache.json  hyperparameter_optimization.py  input.toml  path_to_id_cache.json  test.toml  train.py  train_mve.py  train_mve_from_loaders.py  train_mve_ncv.py
(+7645 files in other folders)
